style.css
/* ... */
/* Smaller screens | <1120px */
@media only screen and (max-width: 65em) {
	#wrapper {
		width: 96%;
	}
	.post-title, .page-title {
		font-size: 1.5em;
	}
	#header {
		padding: 1.5em;
	}
	#mainnav-menu a {
		font-size: 1.0em;
	}
}
/* Tablets (landscape) | <960px */
@media only screen and (max-width: 60em) {
	#wrapper {
		width: 100%;
		margin: 0;
	}
	#content {
		float: none;
		width: 100%;
		padding: 0;
	}
	#sidebar {
		clear: both;
		float: none;
		margin: 2em 0 0;
		width: 100%;
	}
	#logo {
		float: none;
		width: 100%;
		text-align: center;
		margin: 0.5em 0 0;
	}
	#header-banner {
		float: none;
		margin-top: 2em;
		text-align: center;
		max-width: 100%;
	}
	
	/* Mobile Top Navigation */
	
	/* Reset */
	#topnav, #topnav-menu, #topnav-menu li, #topnav-menu a, #topnav-menu ul {
		margin: 0;
		padding: 0;
		position: static;
		float: none;
		display: inline;
		font-size: 1.0em;
		border: none;
		box-shadow: none;
		background: none;
		top: 0;
		left: 0;
	}
	
	#topnav {
		float: none;
	}
	#topnav-toggle {
		display: inline-block;
		margin: 0;
		padding: 0.6em;
		text-decoration: none;
		font-size: 0.85em;
		color: #dd2727;
		background: none;
		border: none;
	}
	#topnav-toggle:hover {
		color: #222;
		cursor: pointer;
	}
	#topnav-toggle:before {
		display: inline-block;
		margin: -0.3em 0.8em -0.2em 0.3em;
		font: normal 14px Genericons;
		-webkit-font-smoothing: antialiased;
		content: '\f419';
		text-decoration: none;
		vertical-align: middle;
	}
	
	#topnav-menu {
		width: 100%;
		display: none;
		background: #fbfbfb;
	}
	#topnav-menu a {
		display: block;
		padding: 0.8em 1.2em;
		text-decoration: none;
		font-size: 0.85em;
		border-top: 1px solid #ddd;
		clear: left;
	}
	
	/* Mobile Main Navigation */
	
	/* Reset */
	#mainnav, #mainnav-menu, #mainnav-menu li, #mainnav-menu a, #mainnav-menu ul, 
	#mainnav-menu ul a, #mainnav-menu ul ul, #mainnav-menu li ul ul 
	{
		margin: 0;
		padding: 0;
		position: static;
		float: none;
		display: inline;
		font-size: 1.0em;
		border: none;
		box-shadow: none;
		background: none;
		top: 0;
		left: 0;
	}
	#mainnav-menu li:hover ul ul, #mainnav-menu li:hover ul ul ul, #mainnav-menu li:hover ul ul ul ul,
	#mainnav-menu li:hover ul, #mainnav-menu li li:hover ul, #mainnav-menu li li li:hover ul, #mainnav-menu li li li li:hover ul
	{
		display: inline;
	}
	
	#mainnav {
		margin: 1.5em 0;
		float: none;
	}
	#mainnav-toggle {
		display: block;
		width: 100%;
		padding: 0.8em 1.4em;
		text-decoration: none;
		font-size: 1.15em;
		font-family: 'Share', Tahoma, Verdana, Arial;
		text-align: left;
		background: none;
		border: none;
		border-top: 1px solid #222;
		border-bottom: 2px solid #222;
	}
	#mainnav-toggle:hover {
		cursor: pointer;
		color: #dd2727;
	}
	#mainnav-toggle:after {
		float: right;
		margin: 0;
		-webkit-font-smoothing: antialiased;
		display: inline-block;
		content: '\f419';
		font: normal 24px/1 Genericons;
		text-decoration: none;
		vertical-align: middle;
	}
	#mainnav-menu {
		width: 100%;
		display: none;
		background: #fff;
	}
	#mainnav-menu a {
		display: block;
		padding: 1.2em 1.4em;
		color: #222;
		text-decoration: none;
		font-size: 1.05em;
		border-bottom: 1px solid #ccc;
		background: #fff;
		clear: left;
	}
	#mainnav-menu a:link, #mainnav-menu a:visited {
		color: #222;
	}
	#mainnav-menu a:hover, #mainnav-menu a:active {
		color: #dd2727;
	}
	#mainnav-menu ul {
		float: left;
		background: #fbfbfb;
		width: 100%;
	}
	#mainnav-menu ul a {
		display: block;
		width: 100%;
		padding: 1em 1em 1em 2.5em;
		font-size: 0.9em;
		border-bottom: 1px solid #ddd;
		-webkit-box-sizing: border-box;
		-moz-box-sizing: border-box;
		box-sizing: border-box;
	}
	#mainnav-menu ul ul a {
		padding-left: 4em;
	}
	#mainnav-menu ul ul ul a {
		padding-left: 5.5em;
	}
	#mainnav-menu ul a:link, #mainnav-menu ul a:visited {
		color: #222;
	}
	#mainnav-menu ul a:hover, #mainnav-menu ul a:active {
		color: #dd2727;
		background: none;
	}
	#mainnav-menu li.current_page_item ul li a, #mainnav-menu li.current-menu-item ul li a {
		color: #222;
	}
	#mainnav-menu ul li.current_page_item a, #mainnav-menu ul li.current-menu-item a {
		color: #222;
	}
	
	
	#mainnav-menu .menu-item-has-children a:after, #mainnav-menu .page_item_has_children a:after {
		content: '';
	}
	#mainnav-menu .submenu-dropdown-toggle {
		float: right;
		display: block;
		margin: 0;
		padding: 1.5em 2em 0.7em;
	}
	#mainnav-menu .submenu-dropdown-toggle:hover {
		cursor: pointer;
	}
	#mainnav-menu .submenu-dropdown-toggle:before {
		font-size: 20px;
		line-height: 1;
		font-family: 'Genericons';
		-webkit-font-smoothing: antialiased;
		-moz-osx-font-smoothing: grayscale;
		text-decoration: inherit;
		vertical-align: bottom;
		content: '\f502';
		color: #222;
	}
	#mainnav-menu .submenu-dropdown-toggle:hover:before {
		color: #dd2727;
	}
	#mainnav-menu .submenu-dropdown-toggle.active {
		padding: 0.8em 2em 1.6em;
	}
	#mainnav-menu .submenu-dropdown-toggle.active:before {
		content: '\f500';
	}
	
	#mainnav-menu ul .submenu-dropdown-toggle {
		padding: 1.2em 1.5em 0.5em;
	}
	#mainnav-menu ul .submenu-dropdown-toggle.active {
		padding: 0.5em 1.5em 1.2em;
	}
	#mainnav-menu ul .submenu-dropdown-toggle:before {
		font-size: 14px;
	}
	
	/* Category Post Widgets */
	.widget-category-posts .big-post .post-title {
		font-size: 1.4em;
	}
	
	/* Footer Area */
	#footer-wrap {
		padding: 2em;
	}
	#footer {
		text-align: center;
	}
	#footer .footer-content {
		margin-top: 2em;
	}
	#footernav, #footernav-menu {
		float: none;
	}
	#footernav-menu li {
		margin: 0 1em;
	}
}
/* ... */

